--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ layout: coverpage
 
     <div class="col-md-9">
       <p><strong>Short Bio:</strong> Katerina Fragkiadaki is the JPMorgan Chase Associate Professor in Machine Learning at Carnegie Mellon University. She earned her B.S. from the National Technical University of Athens and her Ph.D. from the University of Pennsylvania, followed by postdoctoral work at UC Berkeley and Google Research. Her research combines common sense reasoning with deep visuomotor learning to enable few-shot and continual learning for perception, action, and language grounding. Her group develops methods in 2D-to-3D perception, vision-language grounding, and navigation policies. She received awards including the NSF CAREER and DARPA Young Investigator Awards and is Program Chair for ICLR 2024.</p>
-   
+      <p><strong>Talk Title:</strong> From Videos to Physics Engine Simulations to Neural Simulations</p>
     </div>
       <hr>
 
