--- a/schedule.html
+++ b/schedule.html
@@ -58,7 +58,7 @@ layout: default
       <tr>
         <td><span class="dot-invited-talk"></span> 11:30 - 12:00</td>
         <td>Katerina Fragkiadaki</td>
-        <td>Invited Talk 3 (25 min talk + 5 min QA)</td>
+        <td>From Videos to Physics Engine Simulations to Neural Simulations</td>
       </tr>
       <tr>
         <td><span class="dot-panel-discussion"></span> 12:00 - 12:30</td>
