--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ layout: coverpage
     </tr>
     <tr>
       <td>Camera-ready due</td>
-      <td>10.09.2025</td>
+      <td>15.09.2025</td>
     </tr>
     </tbody>
     </table>
@@ -152,7 +152,7 @@ layout: coverpage
 </div>
 -->
 <div id="speakers" class="row main-content">
-  <h2>Speakers and Panelists (TBD)</h2>
+  <h2>Speakers and Panelists</h2>
   <div class="break"></div>
   <div class="container" style="max-width: 1140px;">
   <div class="row align-items-start mb-4">
@@ -284,7 +284,7 @@ layout: coverpage
 
     <div class="col-md-9">
       <p><strong>Short Bio:</strong> Boyi Li is a Research Staff at NVIDIA Research and a Research Fellow at UC Berkeley. She earned her Ph.D. in EECS from Cornell University & Cornell Tech. Her research focuses on advancing multimodal embodied intelligence, developing generalizable algorithms, and creating interactive intelligent systems. Central to this work is reasoning, language models, generative models, and robotics. A key aspect involves aligning representations from diverse multimodal data, including 2D pixels, 3D geometry, language, and audio.</p>
-      <p><strong>Speaker and Panelist</strong></p>
+      <p><strong>Talk Title:</strong>Learning to Simulate Multimodal Robot Worlds</p>
      
     </div>
      
