--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@ layout: coverpage
     <hr>
     <div class="col-md-3 text-center">
       <img class="img-fluid rounded-circle mb-2" height="150" width="150"
-            src="images/speakers/russ_tedrake.jpg" alt="">
+            src="images/speakers/nicholas_pfaff.jpg" alt="">
         <a href="https://www.tri.global/about-us/dr-russ-tedrake">
           <h4 class="section-heading">
-            <center>Russ Tedrake</center>
+            <center>Nicholas Pfaff</center>
           </h4>
         </a>
         <h5 class="section-heading">
@@ -263,7 +263,8 @@ layout: coverpage
       </div>
 
     <div class="col-md-9">
-      <p><strong>Short Bio:</strong> Dr. Russ Tedrake is Senior Vice President of Large Behavior Models at Toyota Research Institute (TRI) and Toyota Professor at the Massachusetts Institute of Technology (MIT). The Large Behavior Models division is building foundation models for dexterous robotic manipulation and includes world-class researchers who focus on machine learning (especially computer vision and large multimodal models), dynamics and simulation, human-robot interaction, and hardware and software for dexterous manipulation.</p>
+      <p><strong>Short Bio:</strong> Nicholas Pfaff is a third-year PhD student in the Robot Locomotion Group at MIT, advised by Prof. Russ Tedrake. His research focuses on scaling realistic simulations to generate training data for robotic manipulation foundation models, combining model-based and learning-based approaches. Prior to MIT, he worked at Ocado Technology on large-scale pick-and-place systems, and he is a recipient of an MIT Graduate Teaching Award.
+      </p>
       <p><strong>Talk Title:</strong> Scaling Robot Simulation: Automating Physically Accurate and Diverse Worlds</p>
      
     </div>
