--- a/schedule.html
+++ b/schedule.html
@@ -7,7 +7,7 @@ layout: default
   </video>
   <div class="banner-text">
     <h2>Learning to Simulate Robot Worlds</h2>
-    <h4>CoRL 2025 Workshop</h4>
+    <h4>CoRL 2025 Workshop, COEX Convention Center, Room E8</h4>
     <p>September 27, 2025</p>
     <p>
       <span role="img" aria-label="South Korea Flag" style="font-size:1.2em;">🇰🇷</span>
@@ -38,67 +38,62 @@ layout: default
       <tr>
         <td><span class="dot-invited-talk"></span> 09:45 - 10:15</td>
         <td>Daniel Ho</td>
-        <td>X World Model: Solving humanoid policy training and evaluation with data synthesis and action contro</td>
+        <td>X World Model: Solving humanoid policy training and evaluation with data synthesis and action control</td>
       </tr>
       <tr>
-        <td><span class="dot-lightning-talk"></span> 10:15 - 10:30</td>
+        <td><span class="dot-invited-talk"></span> 10:15 - 10:45</td>
+        <td>Yilun Du</td>
+        <td>Learning Generative World Simulators</td>
+      </tr>
+      <tr>
+        <td><span class="dot-poster-session"></span> 10:45 - 11:15</td>
         <td></td>
-        <td>Spotlight Presentations</td>
+        <td>Coffee break & Poster Session 1</td>
       </tr>
       <tr>
-        <td><span class="dot-poster-session"></span> 10:30 - 11:00</td>
-        <td></td>
-        <td>Coffee break & Posters</td>
-      </tr>
-      <tr>
-        <td><span class="dot-invited-talk"></span> 11:00 - 11:30</td>
-        <td>Hao Su</td>
-        <td>Learning World Models for Embodied AI</td>
-      </tr>
-      <tr>
-        <td><span class="dot-invited-talk"></span> 11:30 - 12:00</td>
+        <td><span class="dot-invited-talk"></span> 11:15 - 11:45</td>
         <td>Katerina Fragkiadaki</td>
         <td>From Videos to Physics Engine Simulations to Neural Simulations</td>
       </tr>
       <tr>
-        <td><span class="dot-panel-discussion"></span> 12:00 - 12:30</td>
-        <td>TBD</td>
+        <td><span class="dot-panel-discussion"></span> 11:45 - 12:30</td>
+        <td>Moderator: Katherine Liu</td>
         <td>Panel Discussion</td>
       </tr>
       <tr>
         <td><span class="dot-other-session"></span> 12:30 - 13:30</td>
         <td></td>
-        <td>Lunch</td>
+        <td>Lunch Break & Poster Session 1</td>
       </tr>
       <tr>
         <td><span class="dot-invited-talk"></span> 13:30 - 14:00</td>
         <td>Animesh Garg</td>
-        <td>Invited Talk 4 (25 min talk + 5 min QA)</td>
-      </tr>
-      <tr>
-        <td><span class="dot-invited-talk"></span> 14:00 - 14:30</td>
-        <td>Yilun Du</td>
-        <td>Learning Generative World Simulators</td>
-      </tr>
-      <tr>
-        <td><span class="dot-poster-session"></span> 14:30 - 15:00</td>
-        <td></td>
-        <td>Coffee Break & Posters</td>
-      </tr>
-      <tr>
-        <td><span class="dot-invited-talk"></span> 15:00 - 15:30</td>
         <td>TBD</td>
-        <td>Invited Talk 6 (25 min talk + 5 min QA)</td>
       </tr>
       <tr>
-        <td><span class="dot-other-session"></span> 15:30 - 15:40</td>
+        <td><span class="dot-lightning-talk"></span> 14:00 - 14:25</td>
         <td></td>
-        <td> Paper Awards</td>
+        <td>Spotlight Presentations</td>
       </tr>
       <tr>
-        <td><span class="dot-panel-discussion"></span> 15:40 - 16:30</td>
-        <td>TBD</td>
-        <td>Panel Discussion</td>
+        <td><span class="dot-poster-session"></span> 14:25 - 14:55</td>
+        <td></td>
+        <td>Coffee Break & Poster Session 2</td>
+      </tr>
+      <tr>
+        <td><span class="dot-invited-talk"></span> 14:55 - 15:25</td>
+        <td>Nicholas Pfaff</td>
+        <td>Scaling Robot Simulation: Automating Physically Accurate and Diverse Worlds</td>
+      </tr>
+      <tr>
+        <td><span class="dot-other-session"></span> 15:25 - 15:55</td>
+        <td>Boyi Li</td>
+        <td>Learning to Simulate Multimodal Robot Worlds</td>
+      </tr>
+      <tr>
+        <td><span class="dot-other-session"></span> 15:55 - 16:05</td>
+        <td></td>
+        <td>Paper Awards</td>
       </tr>
     </tbody>
   </table>
