--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ layout: coverpage
           </h4>
         </a>
         <h5 class="section-heading">
-          <center><i>TRI and MIT</i></center>
+          <center><i>MIT</i></center>
         </h5>
       </div>
 
