--- a/schedule.html
+++ b/schedule.html
@@ -90,8 +90,12 @@ layout: default
         <td>Boyi Li</td>
         <td>Learning to Simulate Multimodal Robot Worlds</td>
       </tr>
+      <td><span class="dot-other-session"></span> 15:55 - 16:25</td>
+      <td>Hao Su</td>
+      <td>Learning World Models for Embodied AI</td>
+    </tr>
       <tr>
-        <td><span class="dot-other-session"></span> 15:55 - 16:05</td>
+        <td><span class="dot-other-session"></span> 16:25 - 16:35</td>
         <td></td>
         <td>Paper Awards</td>
       </tr>
