--- a/schedule.html
+++ b/schedule.html
@@ -61,7 +61,7 @@ layout: default
         <td>Panel Discussion</td>
       </tr>
       <tr>
-        <td><span class="dot-other-session"></span> 12:30 - 13:30</td>
+        <td><span class="dot-poster-session"></span> 12:30 - 13:30</td>
         <td></td>
         <td>Lunch Break & Poster Session 1</td>
       </tr>
@@ -86,18 +86,18 @@ layout: default
         <td>Scaling Robot Simulation: Automating Physically Accurate and Diverse Worlds</td>
       </tr>
       <tr>
-        <td><span class="dot-other-session"></span> 15:25 - 15:55</td>
+        <td><span class="dot-invited-talk"></span> 15:25 - 15:55</td>
         <td>Boyi Li</td>
         <td>Learning to Simulate Multimodal Robot Worlds</td>
       </tr>
-      <td><span class="dot-other-session"></span> 15:55 - 16:25</td>
+      <td><span class="dot-invited-talk"></span> 15:55 - 16:25</td>
       <td>Hao Su</td>
       <td>Learning World Models for Embodied AI</td>
     </tr>
       <tr>
-        <td><span class="dot-other-session"></span> 16:25 - 16:35</td>
+        <td><span class="dot-poster-session"></span> 16:25 - 16:35</td>
         <td></td>
-        <td>Paper Awards</td>
+        <td>Paper Awards & Poster Session 2</td>
       </tr>
     </tbody>
   </table>
