--- a/schedule.html
+++ b/schedule.html
@@ -95,9 +95,14 @@ layout: default
       <td>Learning World Models for Embodied AI</td>
     </tr>
       <tr>
-        <td><span class="dot-poster-session"></span> 16:25 - 16:35</td>
+        <td><span class="dot-other-session"></span> 16:25 - 16:30</td>
         <td></td>
-        <td>Paper Awards & Poster Session 2</td>
+        <td>Best Paper Award</td>
+      </tr>
+      <tr>
+        <td><span class="dot-poster-session"></span> 16:30 - 17:00</td>
+        <td></td>
+        <td>Poster Session 2</td>
       </tr>
     </tbody>
   </table>
