--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ layout: coverpage
     <div class="col-md-3 text-center">
       <img class="img-fluid rounded-circle mb-2" height="150" width="150"
             src="images/speakers/nicholas_pfaff.jpg" alt="">
-        <a href="https://www.tri.global/about-us/dr-russ-tedrake">
+        <a href="https://nepfaff.github.io">
           <h4 class="section-heading">
             <center>Nicholas Pfaff</center>
           </h4>
