Added accepted papers

--- a/papers.html
+++ b/papers.html
@@ -19,7 +19,7 @@ layout: default
 <div id="program">
 
 <div class="row main-content">
-  <p>Accepted papers are hosted on the <a href="XXX">Learning to Simulate Robot's World Workshop OpenReview page</a>.</p>
+  <p>Accepted papers are hosted on the <a href="https://openreview.net/group?id=robot-learning.org/CoRL/2025/Workshop/LSRW#tab-accept-spotlight">Learning to Simulate Robot's World Workshop OpenReview page</a>.</p>
 <p>
      All accepted papers will be presented as posters during the poster session.</a>
 </p>
@@ -27,31 +27,253 @@ layout: default
 
 <div class="row main-content">
 <a name="session-1"></a>
-<!-- <table class="table table-striped" id="papers">
+<table class="table table-striped" id="papers">
 <thead>
+     <tr>
+          <th colspan="3" style="text-align:center">Spotlight</th>
+     </tr>
      <tr>
           <th>Title</th>
           <th>Authors</th>
           <th>PDF</th>
+     </tr>
 </thead>
 <tbody>
      
-      <tr>
-    <td>
-    <span><a href="X">X</a></span>
-    </td>
-    <td>
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=RS88uao0hr">Diffusion Dynamics Models with Generative State Estimation for Cloth Manipulation</a></span>
+          </td>
+          <td>
+              Tongxuan Tian, Haoyang Li, Bo Ai, Xiaodi Yuan, Zhiao Huang, Hao Su 
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=RS88uao0hr" target="_blank">PDF</a>
+          </td>
+     </tr>
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=rpKbIHzsEI">DyWA: Dynamics-adaptive World Action Model for Generalizable Non-prehensile Manipulation</a></span>
+          </td>
+          <td>
+              Jiangran Lyu
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=rpKbIHzsEI" target="_blank">PDF</a>
+          </td>
+     </tr>
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=bYOFL7oz22">Robotic World Model: A Neural Network Simulator for Robust Policy Optimization in Robotics</a></span>
+          </td>
+          <td>
+              Chenhao Li, Andreas Krause, Marco Hutter 
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=bYOFL7oz22" target="_blank">PDF</a>
+          </td>
+     </tr>
 
-    </td>
-    <td>
-    <a href="X" target="_blank">PDF</a>
-    </td>
-    </tr>
+</tbody>
+</table> 
+
+<table class="table table-striped" id="papers">
+<thead>
+     <tr>
+          <th colspan="3" style="text-align:center">Poster</th>
+     </tr>
+     <tr>
+          <th>Title</th>
+          <th>Authors</th>
+          <th>PDF</th>
+     </tr>
+</thead>
+<tbody>
+     
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=2soFkV0KrW">ARTIST: Articulated Real-To-Interactive-Sim Twin</a></span>
+          </td>
+          <td>
+               Lennard Schuenemann, Leonardo Barcellona, Christian Gumbsch, Stratis Gavves, Andrii Zadaianchuk
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=2soFkV0KrW" target="_blank">PDF</a>
+          </td>
+     </tr>
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=EAqHMNnfa8">Learning Multimodal Probabilistic Models of Manipulation Skill Effects</a></span>
+          </td>
+          <td>
+               Siyeon Kim, Tucker Hermans, Yixuan Huang, Mohanraj Devendran Shanthi
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=EAqHMNnfa8" target="_blank">PDF</a>
+          </td>
+     </tr>
+
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=nGVVRrVpOQ">Learning Multi-Timescale Phase-Amplitude Dynamics for Human-to-Robot Transfer: Toward Real-to-Sim-to-Real</a></span>
+          </td>
+          <td>
+               Satoshi Yamamori, Jun Morimoto
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=nGVVRrVpOQ" target="_blank">PDF</a>
+          </td>
+     </tr>
+
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=1P9LOCLE2G">Cross-Embodiment Dexterous Manipulation through World Model Learning</a></span>
+          </td>
+          <td>
+               Zihao He, Bo Ai, Yulin Liu, Weikang Wan, Henrik I Christensen, Hao Su
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=1P9LOCLE2G" target="_blank">PDF</a>
+          </td>
+     </tr>
+
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=OHO1hb4dpC">Learning Simulatable Models of Cloth with Spatially-varying Constitutive Properties for Robotics</a></span>
+          </td>
+          <td>
+               Guanxiong Chen, Shashwat Suri, Yuhao Wu, Ganidhu K. Abeysirigoonawardena, Etienne Vouga, David Levin I.W., Dinesh K. Pai
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=OHO1hb4dpC" target="_blank">PDF</a>
+          </td>
+     </tr>
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=z9KgtDP6LB">Planning in 16 Tokens: A Compact Discrete Tokenizer for Latent World Model</a></span>
+          </td>
+          <td>
+               Dongwon Kim, Jinsung Lee, Gawon Seo, Minsu Cho, Suha Kwak
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=z9KgtDP6LB" target="_blank">PDF</a>
+          </td>
+     </tr>
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=PNbhzQecVO">Arena 5.0: A Photorealistic ROS2 Simulation Framework for Developing and Benchmarking Social Navigation</a></span>
+          </td>
+          <td>
+               Linh Kästner
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=PNbhzQecVO" target="_blank">PDF</a>
+          </td>
+     </tr>
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=yTCHrPT89a">Data-Driven Simulation for Training High-Performance Polices</a></span>
+          </td>
+          <td>
+               Grzegorz Czechmanowski, Jan Węgrzynowski, Piotr Kicki, Krzysztof Walas
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=yTCHrPT89a" target="_blank">PDF</a>
+          </td>
+     </tr>
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=6qKmQHZRRd">Infinigen-Sim: Procedural Generation of Articulated Simulation Assets</a></span>
+          </td>
+          <td>
+               Abhishek Joshi, Beining Han, Jack Nugent, Yiming Zuo, Jonathan Liu, Hongyu Wen, Stamatis Alexandropoulos, Tao Sun, Alexander Raistrick, Gaowen Liu, Yi Shao, Jia Deng
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=6qKmQHZRRd" target="_blank">PDF</a>
+          </td>
+     </tr>
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=Gl8uq6fWWM">MORDA: A Synthetic Dataset to Facilitate Adaptation of Object Detectors to Unseen Real-target Domain While Preserving Performance on Real-source Domain</a></span>
+          </td>
+          <td>
+               Hojun Lim, Heecheol Yoo, Jinwoo Lee, Seungmin Jeon, Hyeongseok Jeon
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=Gl8uq6fWWM" target="_blank">PDF</a>
+          </td>
+     </tr>
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=zTqeqm1hkZ">GRADRobot: Geometry-Aware Rendering with Articulation and Diffusion for Robot Modeling</a></span>
+          </td>
+          <td>
+               Yunlong Li, Boyuan Chen, Chongjie Ye, Bohan Li, Zhaoxi Chen, Shaocong Xu, Hao Tang, Hao Zhao
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=zTqeqm1hkZ" target="_blank">PDF</a>
+          </td>
+     </tr>
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=Ob5v7pi7xJ">Fast But Accurate: A Real-Time Hyperelastic Simulator with Robust Frictional Contact</a></span>
+          </td>
+          <td>
+               Siyuan Luo, Ziqiu ZENG, Fan Shi
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=Ob5v7pi7xJ" target="_blank">PDF</a>
+          </td>
+     </tr>
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=niG9rpeLf8">End-to-End Driving through Generative Video Pretraining</a></span>
+          </td>
+          <td>
+               Florent Bartoccioni, Elias Ramzi, Victor Besnier, Shashanka Venkataramanan, Tuan-Hung Vu, Yihong Xu, Loick Chambon, Spyros Gidaris, Serkan odabas, David Hurych, Alexandre Boulch, Mickael Chen, Eloi Zablocki, Andrei Bursuc, Eduardo Valle, Matthieu Cord
+          </td>
+          <td>
+               <a href="https://openreview.net/attachment?id=niG9rpeLf8&name=pdf" target="_blank">PDF</a>
+          </td>
+     </tr>
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=RLNXyxCfWG">FreeAction: Training-Free Techniques for Enhanced Fidelity of Trajectory-to-Video Generation</a></span>
+          </td>
+          <td>
+               Seungwook Kim, Seunghyeon Lee, Minsu Cho
+          </td>
+          <td>
+               <a href="https://openreview.net/attachment?id=RLNXyxCfWG&name=pdf" target="_blank">PDF</a>
+          </td>
+     </tr>
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=I6sa05BRBg">LUMOS: Language-Conditioned Imitation Learning with World Models</a></span>
+          </td>
+          <td>
+               Iman Nematollahi, Branton DeMoss, Akshay L Chandra, Nick Hawes, Wolfram Burgard, Ingmar Posner
+          </td>
+          <td>
+               <a href="https://openreview.net/attachment?id=I6sa05BRBg&name=pdf" target="_blank">PDF</a>
+          </td>
+     </tr>
+     <tr>
+          <td>
+               <span><a href="https://openreview.net/forum?id=ijCCbBAIa1">VR-Robo: A Real-to-Sim-to-Real Framework for Visual Robot Navigation and Locomotion</a></span>
+          </td>
+          <td>
+               Shaoting Zhu, Linzhan Mou, Derun Li, Baijun Ye, Runhan Huang, Hang Zhao
+          </td>
+          <td>
+               <a href="https://openreview.net/pdf?id=ijCCbBAIa1" target="_blank">PDF</a>
+          </td>
+     </tr>
 
 
 </tbody>
 </table> 
--->
+
 </div>
 
 </div>
