Added spotlight presentations

--- a/schedule.html
+++ b/schedule.html
@@ -20,7 +20,7 @@ layout: default
   <p>
   </br><span class="dot-invited-talk"></span> Invited Talk,  <span class="dot-panel-discussion"></span> Panel Discussion, <span class="dot-lightning-talk"></span> Contributed Talks, <span class="dot-poster-session"></span> Poster Session,  <span class="dot-other-session"></span> Other.
   </p>
-  <h2>Schedule (subject to change)</h2>
+  <h2>Schedule</h2>
   <table class="table table-striped table-condensed" id="schedule">
     <thead>
       <tr>
@@ -71,9 +71,19 @@ layout: default
         <td>TBD</td>
       </tr>
       <tr>
-        <td><span class="dot-lightning-talk"></span> 14:00 - 14:25</td>
-        <td></td>
-        <td>Spotlight Presentations</td>
+        <td><span class="dot-lightning-talk"></span> 14:00 - 14:08</td>
+        <td>Haoyang Li</td>
+        <td>Diffusion Dynamics Models with Generative State Estimation for Cloth Manipulation</td>
+      </tr>
+      <tr>
+        <td><span class="dot-lightning-talk"></span> 14:08 - 14:16</td>
+        <td>Jiangran Lyu</td>
+        <td>DyWA: Dynamics-adaptive World Action Model for Generalizable Non-prehensile Manipulation</td>
+      </tr>
+      <tr>
+        <td><span class="dot-lightning-talk"></span> 14:16 - 14:25</td>
+        <td>Chenhao Li</td>
+        <td>Robotic World Model: A Neural Network Simulator for Robust Policy Optimization in Robotics</td>
       </tr>
       <tr>
         <td><span class="dot-poster-session"></span> 14:25 - 14:55</td>
