--- a/papers.html
+++ b/papers.html
@@ -30,7 +30,7 @@ layout: default
 <table class="table table-striped" id="papers">
 <thead>
      <tr>
-          <th colspan="3" style="text-align:center">Spotlight</th>
+          <th colspan="3" style="text-align:center">Spotlights & Morning Poster's Session 1</th>
      </tr>
      <tr>
           <th>Title</th>
@@ -80,7 +80,7 @@ layout: default
 <table class="table table-striped" id="papers">
 <thead>
      <tr>
-          <th colspan="3" style="text-align:center">Poster</th>
+          <th colspan="3" style="text-align:center">Poster @ Morning Session 1</th>
      </tr>
      <tr>
           <th>Title</th>
@@ -214,6 +214,23 @@ layout: default
                <a href="https://openreview.net/pdf?id=zTqeqm1hkZ" target="_blank">PDF</a>
           </td>
      </tr>
+
+</tbody>
+</table> 
+
+<table class="table table-striped" id="papers">
+<thead>
+     <tr>
+          <th colspan="3" style="text-align:center">Poster @ Evening Session 2</th>
+     </tr>
+     <tr>
+          <th>Title</th>
+          <th>Authors</th>
+          <th>PDF</th>
+     </tr>
+</thead>
+<tbody>
+     
      <tr>
           <td>
                <span><a href="https://openreview.net/forum?id=Ob5v7pi7xJ">Fast But Accurate: A Real-Time Hyperelastic Simulator with Robust Frictional Contact</a></span>
