--- a/papers.html
+++ b/papers.html
@@ -30,12 +30,13 @@ layout: default
 <table class="table table-striped" id="papers">
 <thead>
      <tr>
-          <th colspan="3" style="text-align:center">Spotlights & Morning Poster's Session 1</th>
+          <th colspan="4" style="text-align:center">Spotlights & Morning Poster's Session 1</th>
      </tr>
      <tr>
           <th>Title</th>
           <th>Authors</th>
           <th>PDF</th>
+          <th>Poster Number</th>
      </tr>
 </thead>
 <tbody>
@@ -50,6 +51,9 @@ layout: default
           <td>
                <a href="https://openreview.net/pdf?id=RS88uao0hr" target="_blank">PDF</a>
           </td>
+          <td>
+               Zone 1, Morning, 044
+          </td>
      </tr>
      <tr>
           <td>
@@ -60,6 +64,9 @@ layout: default
           </td>
           <td>
                <a href="https://openreview.net/pdf?id=rpKbIHzsEI" target="_blank">PDF</a>
+          </td>
+          <td>
+               Zone 1, Morning, 045
           </td>
      </tr>
      <tr>
@@ -72,6 +79,9 @@ layout: default
           <td>
                <a href="https://openreview.net/pdf?id=bYOFL7oz22" target="_blank">PDF</a>
           </td>
+          <td>
+               Zone 1, Morning, 046
+          </td>
      </tr>
 
 </tbody>
@@ -80,12 +90,13 @@ layout: default
 <table class="table table-striped" id="papers">
 <thead>
      <tr>
-          <th colspan="3" style="text-align:center">Poster @ Morning Session 1</th>
+          <th colspan="4" style="text-align:center">Poster @ Morning Session 1</th>
      </tr>
      <tr>
           <th>Title</th>
           <th>Authors</th>
           <th>PDF</th>
+          <th>Poster Number</th>
      </tr>
 </thead>
 <tbody>
@@ -100,6 +111,9 @@ layout: default
           <td>
                <a href="https://openreview.net/pdf?id=2soFkV0KrW" target="_blank">PDF</a>
           </td>
+          <td>
+               TBD
+          </td>
      </tr>
      <tr>
           <td>
@@ -111,7 +125,10 @@ layout: default
           <td>
                <a href="https://openreview.net/pdf?id=EAqHMNnfa8" target="_blank">PDF</a>
           </td>
-     </tr>
+          <td>
+               Zone 1, Morning, 047
+          </td>
+1     </tr>
 
      <tr>
           <td>
@@ -122,6 +139,9 @@ layout: default
           </td>
           <td>
                <a href="https://openreview.net/pdf?id=nGVVRrVpOQ" target="_blank">PDF</a>
+          </td>
+          <td>
+               Zone 1, Morning, 048
           </td>
      </tr>
 
@@ -135,6 +155,9 @@ layout: default
           <td>
                <a href="https://openreview.net/pdf?id=1P9LOCLE2G" target="_blank">PDF</a>
           </td>
+          <td>
+               Zone 2, Morning, 036
+          </td>
      </tr>
 
      <tr>
@@ -147,6 +170,9 @@ layout: default
           <td>
                <a href="https://openreview.net/pdf?id=OHO1hb4dpC" target="_blank">PDF</a>
           </td>
+          <td>
+               Zone 2, Morning, 037
+          </td>
      </tr>
      <tr>
           <td>
@@ -157,6 +183,9 @@ layout: default
           </td>
           <td>
                <a href="https://openreview.net/pdf?id=z9KgtDP6LB" target="_blank">PDF</a>
+          </td>
+          <td>
+               Zone 2, Morning, 038
           </td>
      </tr>
      <tr>
@@ -169,6 +198,9 @@ layout: default
           <td>
                <a href="https://openreview.net/pdf?id=PNbhzQecVO" target="_blank">PDF</a>
           </td>
+          <td>
+               Zone 2, Morning, 039
+          </td>
      </tr>
      <tr>
           <td>
@@ -179,6 +211,9 @@ layout: default
           </td>
           <td>
                <a href="https://openreview.net/pdf?id=yTCHrPT89a" target="_blank">PDF</a>
+          </td>
+          <td>
+               Zone 2, Morning, 040
           </td>
      </tr>
      <tr>
@@ -191,6 +226,9 @@ layout: default
           <td>
                <a href="https://openreview.net/pdf?id=6qKmQHZRRd" target="_blank">PDF</a>
           </td>
+          <td>
+               Zone 2, Morning, 041
+          </td>
      </tr>
      <tr>
           <td>
@@ -201,6 +239,9 @@ layout: default
           </td>
           <td>
                <a href="https://openreview.net/pdf?id=Gl8uq6fWWM" target="_blank">PDF</a>
+          </td>
+          <td>
+               Zone 2, Morning, 042
           </td>
      </tr>
      <tr>
@@ -213,6 +254,9 @@ layout: default
           <td>
                <a href="https://openreview.net/pdf?id=zTqeqm1hkZ" target="_blank">PDF</a>
           </td>
+          <td>
+               Zone 2, Morning, 043
+          </td>
      </tr>
 
 </tbody>
@@ -221,12 +265,13 @@ layout: default
 <table class="table table-striped" id="papers">
 <thead>
      <tr>
-          <th colspan="3" style="text-align:center">Poster @ Evening Session 2</th>
+          <th colspan="4" style="text-align:center">Poster @ Evening Session 2</th>
      </tr>
      <tr>
           <th>Title</th>
           <th>Authors</th>
           <th>PDF</th>
+          <th>Poster Number</th>
      </tr>
 </thead>
 <tbody>
@@ -241,6 +286,9 @@ layout: default
           <td>
                <a href="https://openreview.net/pdf?id=Ob5v7pi7xJ" target="_blank">PDF</a>
           </td>
+          <td>
+               Zone 1, Evening, 044
+          </td>
      </tr>
      <tr>
           <td>
@@ -251,6 +299,9 @@ layout: default
           </td>
           <td>
                <a href="https://openreview.net/attachment?id=niG9rpeLf8&name=pdf" target="_blank">PDF</a>
+          </td>
+          <td>
+               Zone 1, Evening, 045
           </td>
      </tr>
      <tr>
@@ -263,6 +314,9 @@ layout: default
           <td>
                <a href="https://openreview.net/attachment?id=RLNXyxCfWG&name=pdf" target="_blank">PDF</a>
           </td>
+          <td>
+               Zone 1, Evening, 046
+          </td>
      </tr>
      <tr>
           <td>
@@ -274,6 +328,9 @@ layout: default
           <td>
                <a href="https://openreview.net/attachment?id=I6sa05BRBg&name=pdf" target="_blank">PDF</a>
           </td>
+          <td>
+               Zone 1, Evening, 047
+          </td>
      </tr>
      <tr>
           <td>
@@ -284,6 +341,9 @@ layout: default
           </td>
           <td>
                <a href="https://openreview.net/pdf?id=ijCCbBAIa1" target="_blank">PDF</a>
+          </td>
+          <td>
+               Zone 1, Evening, 048
           </td>
      </tr>
 
