--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: coverpage
   </video>
   <div class="banner-text">
     <h2>Learning to Simulate Robot Worlds</h2>
-    <h4>CoRL 2025 Workshop, COEX Convention Center, Room E8</h4>
+    <h4>CoRL 2025 Workshop, COEX Convention Center, Room E8, Posters: Zone 1 (044-048) + Zone 2 (036-043) Morning</h4>
     <p>September 27, 2025</p>
     <p>
       <span role="img" aria-label="South Korea Flag" style="font-size:1.2em;">🇰🇷</span>
